k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: datadash
  labels:
    name: datadash
    environment: production
