k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datadash-ingress
  namespace: datadash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: datadash.k8smon.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datadash-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: datadash-backend
            port:
              number: 5000
